WIP: Adjusted radiobutton-group component - adjusted demo-page - adjusted some inner workings - fixed layout bug by using ng-deep - output changed to emit the value and not the selected component ref - removed ngIf for label, because it has to be always provided - shortened if-statement to method agreed on by Marc

--- a/src/app/components/radiobutton-group/radiobutton-group.component.scss
+++ b/src/app/components/radiobutton-group/radiobutton-group.component.scss
@@ -5,15 +5,21 @@
 
     span {
         @include label-01;
-        display: inline-block;
-        margin-bottom: 0.5rem;
+        display: block;
         user-select: none;
-    }
-    
-    app-radiobutton {
         margin-bottom: $spacing-03;
     }
+
+    ::ng-deep app-radiobutton {
+        margin-bottom: $spacing-03;
+        margin-right: $spacing-03;
+    }
+
+    &.stackedList ::ng-deep app-radiobutton {
+        display: grid;
+    }
 }
+
 
 @each $themeName, $theme in $themes {
     .theme-#{$themeName} {
