--- a/src/app/components/radiobutton/radiobutton.component.scss
+++ b/src/app/components/radiobutton/radiobutton.component.scss
@@ -23,7 +23,7 @@
 
     &.checked div::after {
         content: "";
-        display: inline-block;
+        display: block;
         width: 100%;
         height: 100%;
         border-radius: 50%;
@@ -40,9 +40,6 @@
     }
 }
 
-.stackedList :host {
-    display: grid;
-}
 
 // themes
 @each $themeName, $theme in $themes {
